feat: complete login POC with backend integration and documentation

--- a/elunic-workspace/apps/frontend/project.json
+++ b/elunic-workspace/apps/frontend/project.json
@@ -60,6 +60,7 @@
         },
         "development": {
           "buildTarget": "frontend:build:development",
+          "proxyConfig": "apps/frontend/proxy.conf.json",
           "allowedHosts": [
             "d2096c66-2918-4035-ab16-96246ced62bc-00-kd9tnoba6scq.janeway.replit.dev"
           ]
